; ModuleID = '/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dm_local.c_dmlab_override_pickup.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/deepmind/extr_dm_local.c_dmlab_override_pickup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEEPMIND_OVERRIDE_PICKUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmlab_override_pickup(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* @DEEPMIND_OVERRIDE_PICKUP, align 4
  %8 = load i32, i32* %4, align 4
  %9 = sext i32 %8 to i64
  %10 = load i32*, i32** %5, align 8
  %11 = ptrtoint i32* %10 to i64
  %12 = load i32*, i32** %6, align 8
  %13 = ptrtoint i32* %12 to i64
  %14 = call i32 @trap_DeepmindCallback(i32 %7, i64 %9, i64 %11, i64 %13, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  ret i32 %14
}

declare dso_local i32 @trap_DeepmindCallback(i32, i64, i64, i64, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
